tests/errors/string-fixed-too-long.ssv
code:string(3)
EUR
EURO
